// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropButton close by clicking outside 1`] = `
<button
  aria-label="Open Drop"
  class="StyledButton-qbvYY keaqZn"
  label="Dropper"
  type="button"
>
  <div
    class="StyledBox-YaZNy dRDGjF"
  >
    <span
      class="StyledText-dmaDlZ iiuQkH"
    >
      <strong>
        Dropper
      </strong>
    </span>
  </div>
</button>
`;

exports[`DropButton close by clicking outside 2`] = `
<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton close by clicking outside 3`] = `
"@media only screen and (max-width:699px) {
  .dRDGjF {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dRDGjF {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .keaqZn {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .jAOdjK {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .lavWGj {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}"
`;

exports[`DropButton closed 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.c2 {
  font-size: 16px;
  line-height: 1.375;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #865CD6;
  border-radius: 24px;
  color: #444444;
  padding: 10px 46px;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #865CD6;
}

.c0:hover svg {
  fill: #000000;
  stroke: #000000;
  -webkit-transition: none;
  transition: none;
}

@media only screen and (max-width:699px) {
  .c1 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .c0 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<button
  aria-label="Open Drop"
  className="c0"
  disabled={false}
  label="Dropper"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  type="button"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <strong>
        Dropper
      </strong>
    </span>
  </div>
</button>
`;

exports[`DropButton disabled 1`] = `
<button
  aria-label="Open Drop"
  class="StyledButton-qbvYY dNApea"
  disabled=""
  label="Dropper"
  type="button"
>
  <div
    class="StyledBox-YaZNy dRDGjF"
  >
    <span
      class="StyledText-dmaDlZ iiuQkH"
    >
      <strong>
        Dropper
      </strong>
    </span>
  </div>
</button>
`;

exports[`DropButton open and close 1`] = `
<button
  aria-label="Open Drop"
  class="StyledButton-qbvYY keaqZn"
  label="Dropper"
  type="button"
>
  <div
    class="StyledBox-YaZNy dRDGjF"
  >
    <span
      class="StyledText-dmaDlZ iiuQkH"
    >
      <strong>
        Dropper
      </strong>
    </span>
  </div>
</button>
`;

exports[`DropButton open and close 2`] = `
<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton open and close 3`] = `
"@media only screen and (max-width:699px) {
  .dRDGjF {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dRDGjF {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .keaqZn {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .lavWGj {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}"
`;

exports[`DropButton opened 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.c2 {
  font-size: 16px;
  line-height: 1.375;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #865CD6;
  border-radius: 24px;
  color: #444444;
  padding: 10px 46px;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #865CD6;
}

.c0:hover svg {
  fill: #000000;
  stroke: #000000;
  -webkit-transition: none;
  transition: none;
}

@media only screen and (max-width:699px) {
  .c1 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .c0 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<button
  aria-label="Open Drop"
  className="c0"
  disabled={false}
  label="Dropper"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  type="button"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <strong>
        Dropper
      </strong>
    </span>
  </div>
</button>
`;

exports[`DropButton opened ref 1`] = `
<button
  aria-label="Open Drop"
  class="StyledButton-qbvYY keaqZn"
  label="Dropper"
  type="button"
>
  <div
    class="StyledBox-YaZNy dRDGjF"
  >
    <span
      class="StyledText-dmaDlZ iiuQkH"
    >
      <strong>
        Dropper
      </strong>
    </span>
  </div>
</button>
`;

exports[`DropButton opened ref 2`] = `
<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton opened ref 3`] = `
"@media only screen and (max-width:699px) {
  .dRDGjF {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dRDGjF {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .keaqZn {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .jAOdjK {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .dNApea {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .lavWGj {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}"
`;
